# codeforces-mashup-api

./: .gitignore  pyproject.toml
codeforces_mashup_api/: db.py  main.py
codeforces_mashup_api/core/: cf_api.py
codeforces_mashup_api/models/: models.py
