[project]
name = "codeforces-mashup-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohimenul-Islam",email = "islam15-5725@diu.edu.bd"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "codeforces_mashup_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
